--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@ Chrome storage partitioning added.</p>
 <tr>
 <td style="text-align:right"><strong>Cookies in 3rd party context</strong></td>
 <td><p><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> Restrict access in subresource requests.</p><p><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> Partitioned access in frame.</p><p><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> Partitioned storage is cleared when no more first-party documents that use the partition are open, or when the browser is closed.</td>
-<td><p><a href="/chrome/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> <span>Cookies restricted to a maximum lifetime of 400 days.</span></p><p><a href="/chrome/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Chrome partitions third-party storage.</span></p></td>
+<td><a href="/chrome/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> <span>Cookies restricted to a maximum lifetime of 400 days.</span></td>
 <td><a href="/edge/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</td>
 <td><p><a href="/firefox/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</p><p><a href="/firefox/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Cookies are partitioned between the site and the third-party. Cookies are not shared across sites.</span></p></td>
 <td><p><a href="/safari/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> All access restricted, except with Storage Access API.</p></td>
