Update CHIPS for Chrome, Edge, Safari

--- a/chrome/index.html
+++ b/chrome/index.html
@@ -868,6 +868,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <p>Chrome does not classify classify trackers or domains for the purposes of tracking protection.</p>
 <h2 id="third-party-cookies">Third-party cookies</h2>
 <p>Chrome restricts the maximum lifetime of cookies to 400 days.</p>
+<p>Chrome supports an <strong>opt-in</strong> flag in cookies, <code>Partitioned;</code>. This is part of the <strong>C</strong>ookies <strong>H</strong>aving <strong>I</strong>ndependent <strong>P</strong>artitioned <strong>S</strong>tate proposal (CHIPS). Cookies with this flag can be accessed in third-party context, but they are partitioned between the site sending requests to the third-party and the third-party itself. Cookies in a partition cannot be accessed by other sites that also communicate with the same third-party.</p>
 <h2 id="first-party-cookies">First-party cookies</h2>
 <p>Chrome restricts the maximum lifetime of cookies to 400 days. Other than that, Chrome does not restrict the use of first-party cookies.</p>
 <h2 id="other-third-party-storage">Other third-party storage</h2>
